<resources>
    <string name="app_name">AnimeInfoApps</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="one_piece">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4.9</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="familiarity">Similar</string>
    <string name="lorem">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
</resources>