<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="249dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_banner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.155"
            app:srcCompat="@drawable/ic_thumbnail" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/one_piece"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_thumbnail"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/txt_title"
            app:srcCompat="@drawable/ic_download"
            tools:layout_editor_absoluteY="261dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/rent"
            app:layout_constraintEnd_toStartOf="@+id/btn_buy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" />

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:text="@string/buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_rent"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            app:layout_constraintEnd_toStartOf="@+id/txt_type"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_rent" />

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintEnd_toStartOf="@+id/txt_percentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_rating"
            app:layout_constraintTop_toBottomOf="@+id/btn_rent" />

        <TextView
            android:id="@+id/txt_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/percentage"
            app:layout_constraintEnd_toStartOf="@+id/txt_familiarity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_type"
            app:layout_constraintTop_toBottomOf="@+id/btn_rent" />

        <TextView
            android:id="@+id/txt_familiarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/familiarity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_percentage"
            app:layout_constraintTop_toBottomOf="@+id/btn_rent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/lorem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_type"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>